@@ -26,6 +26,7 @@ New in svn version:
 
 Fixed in svn version:
 
+   * PWscf: energy related to external forces wasn't correct
    * CP: Wannier functions dynamics with nspin=2 wasn't working
    * PWscf: restart in variable-cell case wasn't working in v.5.1
    * pot_extrapolation='none' was crashing with a bogus error message
